# IDC_gazebo_control

./: README.md
gazebo_keyboard_plugin/: CMakeLists.txt  package.xml
gazebo_keyboard_plugin/launch/: gazebo.keyboard.launch.py
gazebo_keyboard_plugin/src/: keyboard_plugin.cpp
gazebo_plugin/: CMakeLists.txt  package.xml
gazebo_plugin/include/gazebo_plugin/: KeyboardGUI.hh  KeysToJointsPlugin.hh
keyboard_controller/: CMakeLists.txt  package.xml
keyboard_controller/config/: key_config.yaml  robot_controller.yaml
keyboard_controller/examples/: multi_keyboard_control.cpp  position_keyboard_control.cpp  robot_teleop.cpp
keyboard_plugin/: CMakeLists.txt  package.xml
keyboard_plugin/include/keyboard_plugin/: KeyboardGUIPlugin.hh
keyboard_plugin/src/: KeyboardGUIPlugin.cc
velocity_controller/: package.xml  setup.py
velocity_controller/config/: key_config.yaml
velocity_controller/screen_display/: screen_display.py
velocity_controller/velocity_controller/: VEL.PY  VEL.py  velocity_controller.py
