<package format="2">
  <name>gazebo_keyboard_plugin</name>
  <version>0.1.0</version>
  <description>Package description</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license> <!-- Add the license tag with your desired license -->
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
